# MatVec

./: .gitignore  CMakeLists.txt  Matrix.sln  README.md
Matrix/: .gitignore  AddSub.h  BasicHelperFunctions.cpp  BasicHelperFunctions.h  BasicOperations.cpp  BasicOperations.cu  BasicOperations.h  Class Definitions.h  ClassDeclarations.h  Constructors.cpp  Creation Routines.cpp  Creation Routines.h  CreationRoutines.cpp  CreationRoutines.h  DTypes.h  DataTypes.h  FIleOps.h  FileOps.cpp  Files.cpp  LoadCopy.h  Matrix.h  Matrix.vcxproj  Matrix.vcxproj.filters  OperatorOverloads.cpp  PyBinder.cpp  Small Helper Functions.cpp  Small Helper Functions.h
Python/: Python.py  Python.pyproj  temp.csv  test_CreateInstances.py
include/: js.h
include/Classes/: MatVec.h
include/Constants/: ClassConstants.h  NumericalConstants.h
src/: temp.cpp
src/Bindings/: Bindings.cpp
test/: a.py
